--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,17 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.1'
+    }
+}
 
 sourceCompatibility = 1.8
 
@@ -22,4 +33,8 @@ dependencies {
     compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
     compile 'org.hibernate:hibernate-core:5.1.0.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
+}
+
+shadowJar {
+    version = 0.1
 }
